--- a/src/shared/i18n/locales/uk.json
+++ b/src/shared/i18n/locales/uk.json
@@ -19,10 +19,26 @@
       "emailPlaceholder": "ваша@пошта.com",
       "passwordLabel": "Пароль",
       "passwordPlaceholder": "••••••••",
+      "confirmPasswordLabel": "Підтвердіть пароль",
+      "confirmPasswordPlaceholder": "••••••••",
       "button": "Створити обліковий запис",
       "haveAccount": "Вже маєте обліковий запис?",
       "signInLink": "Увійти",
       "error": "Не вдалося створити обліковий запис"
+    }
+  },
+  "validation": {
+    "required": "{{field}} обов'язкове поле",
+    "email": "Будь ласка, введіть дійсну електронну адресу",
+    "minLength": "Має бути не менше {{min}} символів",
+    "maxLength": "Має бути не більше {{max}} символів",
+    "notEmpty": "Це поле не може бути порожнім",
+    "password": {
+      "uppercase": "Має містити хоча б одну велику літеру",
+      "lowercase": "Має містити хоча б одну малу літеру",
+      "number": "Має містити хоча б одну цифру",
+      "special": "Має містити хоча б один спеціальний символ",
+      "match": "Паролі мають співпадати"
     }
   },
   "home": {
