--- a/src/shared/i18n/locales/uk.json
+++ b/src/shared/i18n/locales/uk.json
@@ -7,10 +7,10 @@
       "emailPlaceholder": "ваша@пошта.com",
       "passwordLabel": "Пароль",
       "passwordPlaceholder": "••••••••",
-      "button": "Увійти",
+      "submit": "Увійти",
       "noAccount": "Немає облікового запису?",
-      "signUpLink": "Зареєструватися",
-      "error": "Не вдалося увійти"
+      "createAccount": "Створити обліковий запис",
+      "error": "Невірна електронна пошта або пароль"
     },
     "signUp": {
       "title": "Створити обліковий запис",
@@ -21,9 +21,9 @@
       "passwordPlaceholder": "••••••••",
       "confirmPasswordLabel": "Підтвердіть пароль",
       "confirmPasswordPlaceholder": "••••••••",
-      "button": "Створити обліковий запис",
+      "submit": "Створити обліковий запис",
       "haveAccount": "Вже маєте обліковий запис?",
-      "signInLink": "Увійти",
+      "signIn": "Увійти",
       "error": "Не вдалося створити обліковий запис"
     }
   },
@@ -38,7 +38,17 @@
       "lowercase": "Має містити хоча б одну малу літеру",
       "number": "Має містити хоча б одну цифру",
       "special": "Має містити хоча б один спеціальний символ",
-      "match": "Паролі мають співпадати"
+      "match": "Паролі мають співпадати",
+      "min": "Пароль має бути не менше {{min}} символів",
+      "max": "Пароль має бути не більше {{max}} символів"
+    },
+    "field": {
+      "name": "Ім'я",
+      "email": "Електронна пошта",
+      "password": "Пароль",
+      "confirmPassword": "Підтвердження паролю",
+      "nativeLanguage": "Рідна мова",
+      "targetLanguage": "Цільова мова"
     }
   },
   "home": {
@@ -53,9 +63,24 @@
     "sign_out": "Вийти",
     "sign_in": "Увійти",
     "sign_up": "Зареєструватися",
-    "app_name": "Тренажер Слів"
+    "app_name": "Тренажер Слів",
+    "dictionary": "Словник",
+    "my_words": "Мої слова",
+    "practice": "Практика",
+    "stats": "Статистика",
+    "profile": "Профіль"
   },
   "common": {
+    "loading": "Завантаження...",
+    "error": "Сталася помилка",
+    "save": "Зберегти",
+    "cancel": "Скасувати",
+    "delete": "Видалити",
+    "edit": "Редагувати",
+    "search": "Пошук",
+    "filter": "Фільтр",
+    "sort": "Сортування",
+    "noResults": "Нічого не знайдено",
     "theme": {
       "toggle": "Змінити тему",
       "light": "Світла тема",
@@ -65,5 +90,112 @@
       "en": "Англійська",
       "uk": "Українська"
     }
+  },
+  "notFound": {
+    "title": "Сторінку не знайдено",
+    "description": "Сторінка, яку ви шукаєте, не існує.",
+    "backHome": "На головну"
+  },
+  "dictionary": {
+    "browser": {
+      "title": "Словник",
+      "description": "Шукайте та вивчайте нові слова у нашому словнику",
+      "searchPlaceholder": "Пошук слів...",
+      "filterByPartOfSpeech": "Фільтр за частиною мови",
+      "noResults": "Слова не знайдені"
+    },
+    "entry": {
+      "title": "Слово",
+      "examples": "Приклади",
+      "synonyms": "Синоніми",
+      "antonyms": "Антоніми",
+      "addToMyWords": "Додати до моїх слів",
+      "pronunciation": "Вимова",
+      "partOfSpeech": "Частина мови",
+      "definitions": "Визначення"
+    }
+  },
+  "words": {
+    "list": {
+      "title": "Мої слова",
+      "description": "Керуйте своєю колекцією слів",
+      "searchPlaceholder": "Пошук у моїх словах...",
+      "filterByDifficulty": "Фільтр за складністю",
+      "filterByTags": "Фільтр за тегами",
+      "addWord": "Додати слово",
+      "noWords": "Ще немає доданих слів"
+    },
+    "difficulty": {
+      "easy": "Легкий",
+      "medium": "Середній",
+      "hard": "Складний"
+    },
+    "form": {
+      "original": "Оригінальне слово",
+      "translation": "Переклад",
+      "pronunciation": "Вимова",
+      "examples": "Приклади",
+      "tags": "Теги",
+      "difficulty": "Складність"
+    }
+  },
+  "practice": {
+    "title": "Практика",
+    "description": "Перевірте свої знання та покращуйте словниковий запас",
+    "translate_prompt": "Перекладіть це слово",
+    "check": "Перевірити",
+    "skip": "Пропустити",
+    "correct": "Правильно!",
+    "incorrect": "Неправильно. Спробуйте ще раз!",
+    "progress": "Прогрес",
+    "timeSpent": "Витрачений час",
+    "sessionComplete": "Сесію завершено",
+    "startNewSession": "Почати нову сесію",
+    "correctAnswer": "Правильна відповідь",
+    "next": "Далі"
+  },
+  "statistics": {
+    "title": "Статистика",
+    "description": "Відстежуйте свій прогрес та досягнення",
+    "overall": {
+      "title": "Загальний прогрес",
+      "totalWords": "Всього слів",
+      "learnedWords": "Вивчених слів",
+      "accuracy": "Точність",
+      "averageTime": "Середній час на слово"
+    },
+    "recent": {
+      "title": "Остання активність",
+      "noActivity": "Немає останньої активності"
+    },
+    "progress": {
+      "title": "Графік прогресу",
+      "learned": "Вивчено слів",
+      "practiced": "Практиковано слів"
+    },
+    "details": {
+      "title": "Детальна статистика",
+      "date": "Дата",
+      "word": "Слово",
+      "result": "Результат",
+      "timeSpent": "Витрачений час"
+    }
+  },
+  "profile": {
+    "settings": {
+      "title": "Налаштування профілю",
+      "description": "Керуйте своїми налаштуваннями та мовними вподобаннями",
+      "save": "Зберегти зміни",
+      "error": "Не вдалося оновити профіль",
+      "success": "Профіль успішно оновлено"
+    },
+    "setup": {
+      "title": "Налаштуйте свій профіль",
+      "subtitle": "Розкажіть нам про ваші мовні вподобання",
+      "error": "Не вдалося створити профіль"
+    },
+    "name": "Ім'я",
+    "nativeLanguage": "Рідна мова",
+    "targetLanguage": "Цільова мова"
   }
 }
