--- a/src/shared/i18n/locales/uk.json
+++ b/src/shared/i18n/locales/uk.json
@@ -182,6 +182,10 @@
     }
   },
   "profile": {
+    "title": "Профіль",
+    "description": "Перегляд інформації профілю",
+    "edit": "Редагувати профіль",
+    "memberSince": "Учасник з",
     "settings": {
       "title": "Налаштування профілю",
       "description": "Керуйте своїми налаштуваннями та мовними вподобаннями",
