--- a/src/shared/i18n/locales/uk.json
+++ b/src/shared/i18n/locales/uk.json
@@ -196,10 +196,18 @@
     "setup": {
       "title": "Налаштуйте свій профіль",
       "subtitle": "Розкажіть нам про ваші мовні вподобання",
-      "error": "Не вдалося створити профіль"
+      "error": "Не вдалося створити профіль",
+      "create": "Створити профіль",
+      "submit": "Створити профіль"
     },
     "name": "Ім'я",
     "nativeLanguage": "Рідна мова",
-    "targetLanguage": "Цільова мова"
+    "targetLanguage": "Цільова мова",
+    "createdAt": "Створено",
+    "notCreated": {
+      "title": "Профіль не налаштовано",
+      "description": "Ви ще не налаштували свій профіль. Будь ласка, створіть профіль, щоб почати користуватися додатком.",
+      "setupButton": "Налаштувати профіль"
+    }
   }
 }
